[gd_scene load_steps=4 format=3 uid="uid://c2vgvxtua16r4"]

[ext_resource type="Script" path="res://UI/SkillBuilder/ComponentSelectors/multicomponent_selector/multi_component_line_item.gd" id="1_nlr7f"]
[ext_resource type="Texture2D" uid="uid://cs8hveism00vw" path="res://UI/SkillBuilder/ComponentSelectors/component_selector/pencil.png" id="2_eid2y"]
[ext_resource type="Texture2D" uid="uid://b088fp0usrifx" path="res://UI/SkillBuilder/ComponentSelectors/multicomponent_selector/trash-can.png" id="3_xed3h"]

[node name="MultiComponentLineItem" type="HBoxContainer"]
offset_right = 221.0
offset_bottom = 23.0
script = ExtResource("1_nlr7f")

[node name="Label" type="Label" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 6.5
text = "Example Text"

[node name="EditButton" type="TextureButton" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.75
texture_normal = ExtResource("2_eid2y")
ignore_texture_size = true
stretch_mode = 5

[node name="DeleteButton" type="TextureButton" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.75
texture_normal = ExtResource("3_xed3h")
ignore_texture_size = true
stretch_mode = 5

[connection signal="pressed" from="EditButton" to="." method="_on_edit_button_pressed"]
[connection signal="pressed" from="DeleteButton" to="." method="_on_delete_button_pressed"]
